--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -14,7 +14,7 @@
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true"/>
+   <string notr="true">QWidget{background-color:black;}</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <property name="sizePolicy">
