--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -29,7 +29,10 @@
       <item>
        <widget class="QListView" name="listViewPlaylist">
         <property name="styleSheet">
-         <string notr="true"/>
+         <string notr="true">QWidget{color:rgb(206, 206, 206);}</string>
+        </property>
+        <property name="uniformItemSizes">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
