--- a/mediainfo.ui
+++ b/mediainfo.ui
@@ -16,6 +16,9 @@
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
     <widget class="QLabel" name="label">
+     <property name="styleSheet">
+      <string notr="true">QWidget{color:white;}</string>
+     </property>
      <property name="text">
       <string>TextLabel</string>
      </property>
